--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "tcplat-helper-7e38c66c.zip": 087584296c72a1334e0b8adfb2df3276e4ee55e1
+  "tcplay-helper-7e38c66c091657dcc5d8b2ba902d6ce37db8040d.zip": 087584296c72a1334e0b8adfb2df3276e4ee55e1
 
